GNOME Bugzilla – Bug 705618
Outgoing VoIP windows aren't always front end
Last modified: 2013-08-07 14:55:57 UTC
- Start a call with a contact - The VoIP window is sometimes displayed in the background
Created attachment 251077 [details] [review] call-factory::new-call-handler: remove unused 'outgoing' arg
Created attachment 251078 [details] [review] use the user_action_time received from TP when presenting new call window
Created attachment 251079 [details] [review] empathy_call_window_present(): rename to _new_handler() The name was miss leading as this function do more than just presenting the window.
Created attachment 251080 [details] [review] use the user_action_time received from TP when presenting existing call window
Review of attachment 251077 [details] [review]: ship it
Review of attachment 251078 [details] [review]: yes
Review of attachment 251079 [details] [review]: sure
Review of attachment 251080 [details] [review]: yes
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.