call-factory::new-call-handler: remove unused 'outgoing' arg

https://bugzilla.gnome.org/show_bug.cgi?id=705618